@@ -1,4 +1,4 @@
-DIST OpenOpt0.25.zip 252231 RMD160 6efbaf07ddb5aa4d3003c37d80bcb4944d9f1f2e SHA1 e37b0ea28cdefa9b3962d2d6a9deef4898f3cb34 SHA256 4ff62906613f273675c71fb53fea1f850991887009b9255c2e3d56d486f8b79e
-EBUILD openopt-0.25.ebuild 562 RMD160 45c6d61eaebe1593e52fb3c673364eda083562df SHA1 a2d77797e032b8d69232820a407ff95583fde83a SHA256 9a8b14021745c35a1dd077d3fe7ce6708a9a9c1f69b65efd9b4f63bfd5cecef3
-MISC ChangeLog 297 RMD160 58232c0f17c9593aa7ea411d03c93484b1751a4d SHA1 9c6f9a0e31b4a05303b43a7763023d79fd10b5b4 SHA256 e75719503a5b74b7668f059152667257e670663c2d1270328198b551b90cf9b5
+DIST OpenOpt.zip 283390 RMD160 c7e23f95fdfd4af7c5df960e23641fc1d6a784ba SHA1 f60213b5c01e133b3c06a9698b34484fe1948f2e SHA256 d131c55894b3071b6f679ddb499fc6d2b5b844548878ae6ab2bde2ef96a87978
+EBUILD openopt-0.29.ebuild 838 RMD160 5d4226612f8ded2bb9ee1842741631262e37538f SHA1 08aaa105c416b50da228224a12cbbf6b783bab89 SHA256 8baf5f5ac3fb560726bf9f1005a6c00e45474050eb11c1513e55ba3661610891
+MISC ChangeLog 546 RMD160 33a7065d76cf895db915176136b0f8c748538e23 SHA1 f1542438ccb3a7e968ffa16dbd93e6c22c7c7935 SHA256 dc25289e5e9c2147a00f12399c6e5f3e177d4bc1d645daec80f8394acb6848aa
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
